Fixed configuration paths to be relative to configuration files

--- a/test/cnf/reactor.conf
+++ b/test/cnf/reactor.conf
@@ -16,7 +16,7 @@ engines:
 	avi:
 	{
 		disabled	= false;
-		configfile	= "cnf/aviengine.conf";
+		configfile	= "aviengine.conf";
 	};
 };
 
@@ -25,7 +25,7 @@ plugins:
 	avi:
 	{
 		disabled	= false;
-		libfile		= "../avi.so";
-		configfile	= "cnf/aviplugin.conf";
+		libfile		= "../../avi.so";
+		configfile	= "aviplugin.conf";
 	};
 };
