Add unit tests for Query class to test the multiplelocationoptions setting of the Plugin.

--- a/test/cnf/aviplugin-with-authentication.conf
+++ b/test/cnf/aviplugin-with-authentication.conf
@@ -10,7 +10,7 @@ message:
 	maxrangedays = 31;		# max message query time range length in days; if missing or < 0, using default (31); if 0, unlimited; if exceeded, an error is thrown
 }
 
-multiplelocationoptions = true;	# if missing or false (default), only one location option allowed
+#multiplelocationoptions = true;	# if missing or false (default), only one location option allowed
 
 apikey:
 {
