Added tests for 'excludespecis' parameter (BS-1779)

--- a/test/cnf/aviengine.conf
+++ b/test/cnf/aviengine.conf
@@ -67,7 +67,7 @@ message:
 		#	messirpatterns = [ "pattern1", "pattern2", ... ];
 		#
 		{
-			name = "METAR";
+			names = [ "METAR","SPECI" ];
 			timerangetype = "messagetime";
 			validityhours = 2;
 			latestmessage = true;
