--- a/test/Makefile
+++ b/test/Makefile
@@ -19,9 +19,17 @@ endif
 
 CC = g++
 CFLAGS = -DUNIX -O0 -g $(FLAGS)
-INCLUDES = -I ../avi -I /usr/include/smartmet -I /usr/include/mysql
 
-LIBS =	-lsmartmet-spine \
+# Boost 1.69
+
+ifneq "$(wildcard /usr/include/boost169)" ""
+  INCLUDES += -I/usr/include/boost169
+  LIBS += -L/usr/lib64/boost169
+endif
+
+INCLUDES += -I ../avi -I /usr/include/smartmet -I /usr/include/mysql
+
+LIBS +=	-lsmartmet-spine \
 	-lsmartmet-newbase \
 	-lsmartmet-macgyver \
 	-lboost_date_time \
