[tests] Fix test/cnf/reactor-with-auhentication.conf

--- a/test/cnf/reactor-with-authentication.conf
+++ b/test/cnf/reactor-with-authentication.conf
@@ -18,8 +18,20 @@ engines:
 		disabled	= false;
 		configfile	= "authengine.conf";
 	};
+
+        avi:
+	{
+		disabled	= false;
+		configfile	= "aviengine.conf";
+	};
 };
 
 plugins:
 {
+	avi:
+	{
+		disabled	= false;
+		libfile		= "../../avi.so";
+		configfile	= "aviplugin-with-authentication.conf";
+	};
 };
