[tests] Workaround problem when testit case without authentication
- absence of authentication engine causes unresolved references in avi plugin
  (Noticed for RHEL10/RockyLinu10, but not earlier versions of these distributions)

--- a/test/cnf/reactor.conf
+++ b/test/cnf/reactor.conf
@@ -13,6 +13,16 @@ libdir = "/usr/share/smartmet";
 
 engines:
 {
+	authentication:
+	{
+		// FIXME: Absence of authentication engine causes unresolved symbols in the plugins
+		//        while testing (strangely noticed for RHEL10/RockyLinu10 only and not for
+		//        earlier versions of these distributions).
+		//        Even marking the engine as disabled does not help.
+		disabled	= false;
+		configfile	= "authengine.conf";
+	};
+
 	avi:
 	{
 		disabled	= false;
